<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, EngineerMode!</string>
    <string name="app_name">EngineerMode</string>
    <string name="internal_app_name">InternalEngineerMode</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_engineer_mode">EngineerMode</string>
    <string name="tab_telephony">Telephony</string>
    <string name="tab_connectivity">Connectivity</string>
    <string name="tab_hardware_testing">Hardware Testing</string>
    <string name="tab_location">Location</string>
    <string name="tab_log_and_debugging">Log and Debugging</string>
    <string name="tab_others">Others</string>
    <string name="activiti_notfind">Can not find module!</string>
    <string name="cmmb">CMMB</string>
    <string name="simme_lock">Simme Lock</string>
    <string name="cfu">CFU</string>
    <string name="bandmode">BandMode</string>
    <string name="rat_mode">RAT Mode</string>
    <string name="repeat_call_test">Repeat Call Test</string>
    <string name="network_info">NetworkInfo</string>
    <string name="dualtalk_network_info">Dual Talk NetworkInfo</string>
    <string name="dualtalk_bandmode">Dual Talk BandMode</string>
    <string name="network_setting">Network Setting</string>
    <string name="modem_test">Modem Test</string>
    <string name="rf_desense_test">RF De-sense Test</string>
    <string name="fast_dormancy">Fast Dormancy</string>
    <string name="nfc_6605">NFC(6605)</string>
    <string name="nfc_3110">NFC(MSR3110)</string>
    <string name="fm_receiver">FM Receiver</string>
    <string name="fm_transmitter">FM Transmitter</string>
    <string name="io">IO</string>
    <string name="touchscreen">TouchScreen</string>
    <string name="sd_card_test">SD Card Test</string>
    <string name="sd_test_choose_storage">Test Storage</string>
    <string name="sd_test_stop_test_first">test is running, please stop it first</string>
    <string name="sd_test_sd_removed">sd card was removed</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="cpu_stress_test">CPU Stress Test</string>
    <string name="de_sense">De-Sense</string>
    <string name="digital_standard">Digital Standard</string>
    <string name="usb">USB</string>
    <string name="power">Power</string>
    <string name="tv_out">TV Out</string>
    <string name="matv">MATV</string>
    <string name="device_manager">Device Manager</string>
    <string name="location_basedservice">Location Based Service</string>
    <string name="fused_location_provider">Fused Location Provider</string>
    <string name="auto_dialer">Auto Dialer</string>
    <string name="system_logger">System Logger</string>
    <string name="tag_log">Tag Log</string>
    <string name="mtk_logger">MTKLogger</string>
    <string name="ext_md_logger">ExtModemLog</string>
    <string name="debug_utils">Debug Utils</string>
    <string name="swla">SWLA</string>
    <string name="settings_font">Settings Font</string>
    <string name="cds_information">CDS Information</string>
    <string name="thermal">Thermal</string>
    <string name="non_sleep_mode">Non-sleep mode</string>
    <string name="non_sleep_disable">Disable Non-sleep mode</string>
    <string name="non_sleep_enable">Enable Non-sleep mode</string>
    <string name="pch_data_prefer_title">Mobile data service preferred</string>
    <string name="pch_data_prefer_summary">Allow mobile data transmission at full speed</string>
    <string name="pch_data_prefer_message">Mobile data service preferred is used to improve the data transmission efficiency at the cost of lower call receiving rate. Not recommended to do so.\n\nAre you sure to allow mobile data service preferred?</string>
    <string name="BatteryLog">BatteryLog</string>
    <string name="Log_Record_Interval">Interval Of Info Record [1-100]:</string>
    <string name="battery_info_Log">Battery Info Record:</string>
    <string name="battery_info_Log_Start">Start</string>
    <string name="battery_info_Log_End">Stop</string>
    <string name="battery_info_10">10</string>
    <string name="battery_info_s">s</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_stop">Stop</string>
    <string name="battery_restart">Restart</string>
    <string name="battery_current">Current</string>
    <string name="battery_rise">Rise</string>
    <string name="battery_reduce">Reduce</string>
    <string name="battery_temperature">Battery temperature</string>
    <string name="battery_set">Set</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">\u00B0 C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="GPRS">GPRS</string>
    <string name="SIM1">SIM1</string>
    <string name="SIM2">SIM2</string>
    <string name="IMEI">Write IMEI</string>
    <string name="DefSIMText">Default SIM Setting</string>
    <string name="default_sim1">Default SIM1</string>
    <string name="default_sim2">Default SIM2</string>
    <string name="GPRS_Attached">Attached</string>
    <string name="GPRS_Detached">Detached</string>
    <string name="GPRS_FD">Send FD</string>
    <string name="GPRS_ConfigFD">Config SCRI/FD</string>
    <string name="GPRS_1st_PDP">1st PDP</string>
    <string name="GPRS_2nd_PDP">2nd PDP</string>
    <string name="GPRS_As_Primary">As Primary</string>
    <string name="GPRS_As_Secondary">As Secondary</string>
    <string name="GPRS_Activate_PDP">Activate PDP</string>
    <string name="GPRS_Deactivate_PDP">Deactivate PDP</string>
    <string name="GPRS_1000">1000</string>
    <string name="GPRS_Send_Data">Send Data</string>
    <string name="GPRS_FD_SCREEN_ON">Set FD timer for screen on</string>
    <string name="GPRS_FD_SCREEN_OFF">Set FD timer for screen off</string>
    <string name="GPRS_ALWAYS_ATTACH">Always Attach</string>
    <string name="GPRS_WHEN_NEEDED">When Needed</string>
    <string name="GPRS_ALWAYS_ATTACH_CONTINUE">Always Attach Continue</string>
    <string name="GPRS_WHEN_NEEDED_CONTINUE">When Needed Continue</string>
    <string name="GPRS_CANCEL_SPECIFY">Not to Specify</string>
    <string name="GPRS_pdn_reuse_on">PDN reuse on</string>
    <string name="GPRS_pdn_reuse_off">PDN reuse off</string>
    <string name="TouchScreen">TouchScreen</string>
    <string name="TouchScreen_HandWriting">HandWriting</string>
    <string name="TouchScreen_RateReport">RateReport</string>
    <string name="TouchScreen_Verification">Verification</string>
    <string name="TouchScreen_VerificationPoint">PointVerification</string>
    <string name="TouchScreen_VerificationLine">LineVerification</string>
    <string name="TouchScreen_VerificationShaking">ShakingVerification</string>
    <string name="TouchScreen_MultiTouch">MultiTouch</string>
    <string name="TouchScreen_Settings_TextValue">The value</string>
    <string name="TouchScreen_Settings_TextSpinner">Category</string>
    <string name="TouchScreen_Settings_TextSet">Set</string>
    <string name="TouchScreen_Settings">Settings</string>
    <string name="TouchScreen_Settings_Value">0</string>
    <string name="TouchScreen_Settings_sdcard">OFF</string>
    <string name="TouchScreen_Settings_uart">OFF</string>
    <string name="TouchScreen_Settings_TextUart">Enable Uart Log</string>
    <string name="TouchScreen_Settings_TextSDcard">Enable SD card Log</string>
    <string name="memory">Memory</string>
    <string name="memory_item_emi">EMI Registers</string>
    <string name="memory_title_flash">Flash</string>
    <string name="memory_title_emi">EMI Register</string>
    <string name="memory_select_error">Select item error</string>
    <string name="memory_comm_info">Common Info</string>
    <string name="memory_file_sys_info">File System Info</string>
    <string name="memory_partition_info">Partition Info</string>
    <string name="memory_getinfo_error">Can not get flash info</string>
    <string name="memory_dialog_title">Error</string>
    <string name="memory_dialog_message">Not implementation</string>
    <string name="memory_dialog_ok">OK</string>
    <string name="memory_help_msg" product="default">
    Feature name: Memory\n\n
    Used to check flash, file system and partition information.\n\n
    It supports EMMC and NAND flash.\n\n
    There are 2 tabs for detailed information:\n\n
    file system information and partition information.\n\n
    </string>
    <string name="Power">Power</string>
    <string name="PMU">PMU</string>
    <string name="ChargeBattery">ChargeBattery</string>
    <string name="pmu_btn_get">Get</string>
    <string name="pmu_btn_set">Set</string>
    <string name="address_text">Address[Hex input:Fz0xxxxx]-> [z00xxxxx]</string>
    <string name="NEW_MSDC_HOST">Host ID</string>
    <string name="msdc_result">Result</string>
    <string name="msdc_modeset_speedmode">Speed Mode</string>
    <string name="msdc_modeset_cmdqueue">Command Queue</string>
    <string name="msdc_modeset_set">Set Mode</string>
    <string name="cm_sensor_fastest">FASTEST</string>
    <string name="cm_sensor_game">GAME</string>
    <string name="cm_sensor_ui">UI</string>
    <string name="cm_sensor_normal">NORMAL</string>
    <string name="cm_sensor_acc">Acceleration Sensor</string>
    <string name="cm_sensor_gyro">Gyroscope Sensor</string>
    <string name="cm_sensor_xyz">\n\nx: 0\ny: 0\nz: 0</string>
    <string name="cm_sensor_statistic">Curr: 0 HZ\nMean: 0 HZ\nMin: 0 HZ\nMax: 0 HZ\nStdDev: 0 HZ</string>
    <string name="cm_sensor_title">Sensor Test APP</string>
    <string name="power_perf_1">PPM</string>
    <string name="power_perf_2">CPU Hotplug</string>
    <string name="power_perf_3">CPU DVFS</string>
    <string name="power_perf_4">MD Rxd Off</string>
    <string name="power_perf_5">GPU DVFS</string>
    <string name="power_perf_6">Dynamic DSI Freq.</string>
    <string name="power_perf_7">AMS AAL</string>
    <string name="power_perf_option_1">Low power</string>
    <string name="power_perf_option_2">Balance</string>
    <string name="power_perf_option_3">Performance</string>
    <string name="wakelock_debug_log">Wakelock debug log</string>
    <string name="wakelock_debug_log_enable">Enable</string>
    <string name="wakelock_debug_log_disable">Disable</string>
</resources>