<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dip"
            android:layout_marginTop="10dip"
            android:text="@string/NEW_MSDC_HOST" >
        </TextView>

        <Spinner
            android:id="@+id/host_id_sppiner"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip" >
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dip"
            android:layout_marginTop="10dip"
            android:text="@string/msdc_modeset_speedmode" >
        </TextView>

        <Spinner
            android:id="@+id/speed_mode_spinner"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="2dip" >
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dip"
            android:layout_marginTop="10dip"
            android:text="@string/msdc_modeset_cmdqueue" >
        </TextView>

        <Spinner
            android:id="@+id/cmd_queue_spinner"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="2dip" >
        </Spinner>
        <View
            android:layout_width="240dip"
            android:layout_height="1dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:background="#FF909090"/>
        <Button
            android:id="@+id/mode_set_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msdc_modeset_set" >
        </Button>

        <View
            android:layout_width="240dip"
            android:layout_height="1dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:background="#FF909090"/>
        <TextView
            android:id="@+id/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dip"
            android:layout_marginTop="10dip"
            android:text="@string/msdc_result" >
        </TextView>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="2dip" >
        </TextView>
    </LinearLayout>
</ScrollView>