<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_perf_1" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/power_perf_1_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_1" />

            <RadioButton
                android:id="@+id/power_perf_1_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_3" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FF909090" >
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_perf_2" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/power_perf_2_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_1" />

            <RadioButton
                android:id="@+id/power_perf_2_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_3" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FF909090" >
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_perf_3" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/power_perf_3_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_1" />

            <RadioButton
                android:id="@+id/power_perf_3_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_3" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FF909090" >
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_perf_4" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/power_perf_4_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_1" />

            <RadioButton
                android:id="@+id/power_perf_4_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_3" />
        </TableRow>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FF909090" >
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_perf_5" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/power_perf_5_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_1" />

            <RadioButton
                android:id="@+id/power_perf_5_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_3" />
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FF909090" >
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_perf_6" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/power_perf_6_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_1" />

            <RadioButton
                android:id="@+id/power_perf_6_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/power_perf_6_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_3" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FF909090" >
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_perf_7" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/power_perf_7_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_1" />

            <RadioButton
                android:id="@+id/power_perf_7_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/power_perf_7_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_perf_option_3" />
        </TableRow>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FF909090" >
        </View>
    </TableLayout>
</ScrollView>
